<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/my_product"
        android:enabled="true"
        android:icon="@drawable/ic_event"
        android:title="@string/events"/>
    <item
        android:id="@+id/my_order"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:title="@string/map"/>
    <item
        android:id="@+id/my_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
    <item
        android:id="@+id/users"
        android:enabled="true"
        android:icon="@drawable/ic_person_group"
        android:title="@string/users"/>
</menu>