<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_close"
            android:layout_marginRight="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/user_logo"
            android:scaleType="centerCrop"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/white_gray"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="15dp"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="7dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="10dp">
                            <EditText
                                android:id="@+id/name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/custom_regular"
                                android:textSize="13sp"
                                android:hint="@string/name"
                                android:textColor="@color/black"
                                android:textColorHint="@color/white_gray"
                                android:drawableTint="@color/white_gray"
                                android:padding="10dp"
                                android:drawableLeft="@drawable/ic_user"
                                android:drawablePadding="3dp"
                                android:singleLine="true"
                                android:inputType="textPersonName"
                                android:layout_marginLeft="15dp"
                                android:layout_marginRight="15dp"
                                android:background="@drawable/round_gray_bottom_border"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginBottom="10dp">
                            <EditText
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/custom_regular"
                                android:textSize="13sp"
                                android:hint="@string/email"
                                android:textColor="@color/black"
                                android:textColorHint="@color/white_gray"
                                android:drawableTint="@color/white_gray"
                                android:padding="10dp"
                                android:drawableLeft="@drawable/ic_email"
                                android:drawablePadding="3dp"
                                android:singleLine="true"
                                android:inputType="textEmailAddress"
                                android:layout_marginLeft="15dp"
                                android:layout_marginRight="15dp"
                                android:background="@drawable/round_gray_bottom_border" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginBottom="10dp">
                            <EditText
                                android:id="@+id/phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/custom_regular"
                                android:textSize="13sp"
                                android:hint="@string/phone"
                                android:textColor="@color/black"
                                android:textColorHint="@color/white_gray"
                                android:drawableTint="@color/white_gray"
                                android:padding="10dp"
                                android:drawableLeft="@drawable/ic_phone"
                                android:drawablePadding="3dp"
                                android:singleLine="true"
                                android:inputType="phone"
                                android:layout_marginLeft="15dp"
                                android:layout_marginRight="15dp"
                                android:background="@drawable/round_gray_bottom_border" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginBottom="10dp">
                            <TextView
                                android:id="@+id/birthday"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/custom_regular"
                                android:textSize="13sp"
                                android:hint="@string/birth"
                                android:textColor="@color/black"
                                android:textColorHint="@color/white_gray"
                                android:drawableTint="@color/white_gray"
                                android:padding="10dp"
                                android:drawableLeft="@drawable/ic_day"
                                android:drawablePadding="3dp"
                                android:singleLine="true"
                                android:layout_marginLeft="15dp"
                                android:layout_marginRight="15dp"
                                android:background="@drawable/round_gray_bottom_border"
                                app:drawableStartCompat="@drawable/ic_day" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginBottom="10dp">
                            <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/custom_regular"
                                android:textSize="13sp"
                                android:hint="@string/password"
                                android:textColor="@color/black"
                                android:textColorHint="@color/white_gray"
                                android:drawableTint="@color/white_gray"
                                android:padding="10dp"
                                android:drawableLeft="@drawable/ic_lock"
                                android:drawablePadding="3dp"
                                android:singleLine="true"
                                android:inputType="textPassword"
                                android:layout_marginLeft="15dp"
                                android:layout_marginRight="15dp"
                                android:background="@drawable/round_gray_bottom_border" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginBottom="10dp">
                            <EditText
                                android:id="@+id/confirm_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/custom_regular"
                                android:textSize="13sp"
                                android:hint="@string/confirm_password"
                                android:textColor="@color/black"
                                android:textColorHint="@color/white_gray"
                                android:drawableTint="@color/white_gray"
                                android:padding="10dp"
                                android:drawableLeft="@drawable/ic_lock"
                                android:drawablePadding="3dp"
                                android:singleLine="true"
                                android:inputType="textPassword"
                                android:layout_marginLeft="15dp"
                                android:layout_marginRight="15dp"
                                android:background="@drawable/round_gray_bottom_border" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginBottom="10dp">
                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:gravity="center">
                                <RadioButton
                                    android:id="@+id/male_option"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/custom_regular"
                                    android:textSize="13sp"
                                    android:textColor="@color/black"
                                    android:text="@string/male"
                                    android:layout_marginLeft="5dp"
                                    android:layout_marginRight="10dp"
                                    android:checked="true"/>
                                <RadioButton
                                    android:id="@+id/female_option"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/custom_regular"
                                    android:textSize="13sp"
                                    android:textColor="@color/black"
                                    android:text="@string/female"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginRight="5dp"/>
                            </RadioGroup>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="12dp">
                            <TextView
                                android:id="@+id/register_btn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/register"
                                android:textSize="13sp"
                                android:fontFamily="@font/custom_bold"
                                android:textColor="@color/white"
                                android:padding="8dp"
                                android:gravity="center"
                                android:background="@drawable/round_primary_background"
                                android:layout_marginLeft="40dp"
                                android:layout_marginRight="40dp"/>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</LinearLayout>