<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_close"
            android:layout_marginRight="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/user_logo"
            android:scaleType="centerCrop"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/white_gray"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardElevation="2dp"
                    app:cardCornerRadius="7dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="10dp">
                            <EditText
                                android:id="@+id/user_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="13sp"
                                android:hint="@string/email"
                                android:fontFamily="@font/custom_regular"
                                android:textColor="@color/black"
                                android:textColorHint="@color/white_gray"
                                android:padding="10dp"
                                android:singleLine="true"
                                android:drawableLeft="@drawable/ic_email"
                                android:drawableTint="@color/white_gray"
                                android:drawablePadding="3dp"
                                android:inputType="textEmailAddress"
                                android:layout_marginLeft="15dp"
                                android:layout_marginRight="15dp"
                                android:background="@drawable/round_gray_bottom_border" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginBottom="10dp">
                            <EditText
                                android:id="@+id/user_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="13sp"
                                android:hint="@string/password"
                                android:fontFamily="@font/custom_regular"
                                android:textColor="@color/black"
                                android:textColorHint="@color/white_gray"
                                android:padding="10dp"
                                android:drawableLeft="@drawable/ic_lock"
                                android:drawableTint="@color/white_gray"
                                android:drawablePadding="3dp"
                                android:singleLine="true"
                                android:inputType="textPassword"
                                android:layout_marginLeft="15dp"
                                android:layout_marginRight="15dp"
                                android:background="@drawable/round_gray_bottom_border"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="15dp"
                            android:orientation="vertical"
                            android:gravity="center">
                            <TextView
                                android:id="@+id/login_btn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAllCaps="true"
                                android:fontFamily="@font/custom_bold"
                                android:text="@string/login"
                                android:textSize="13sp"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:padding="10dp"
                                android:gravity="center"
                                android:background="@drawable/round_primary_background"
                                android:layout_marginLeft="40dp"
                                android:layout_marginRight="40dp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_marginBottom="15dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/custom_regular"
                                android:text="@string/account_exist"
                                android:textSize="12sp"
                                android:textColor="@color/black"/>
                            <TextView
                                android:id="@+id/register_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/custom_bold"
                                android:text="@string/register"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimary"
                                android:gravity="center"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="15dp"/>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</LinearLayout>